--- a/index.html
+++ b/index.html
@@ -7,6 +7,36 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <!-- Navigation -->
+    <nav>navigation
+        <!-- <a href="#">Microsoft 365</a>
+        <a href="#">Microsoft 365</a>
+        <a href="#">Microsoft 365</a>
+        <a href="#">Microsoft 365</a>
+        <a href="#">Microsoft 365</a>
+        <a href="#">Microsoft 365</a>
+        <a href="#">Microsoft 365</a>
+        <a href="#">Microsoft 365</a> -->
+    </nav>
+    <!-- Banner -->
+    <div class="banner">banner</div>
+    <!-- Slideshow -->
+    <div class="big-fancy-pic">big fancy pic</div>
+    <!-- Icons -->
+    <span class="icons">icons</span>
+    <!-- Products -->
+    <div class="products">products</div>
+    <!-- Sale -->
+    <div class="sale-banner">Sales banner</div>
+    <!-- Business -->
+    <div class="business-boxes">Business ads</div>
+    <!-- Gaming -->
+    <div class="gaming-banner">Minecraft gaming</div>
+    <!-- Social Media -->
+    <div class="social-media">Social media links</div>
+    <!-- Footer index -->
+    <footer>
+        lots of footer links
+    </footer>
 </body>
 </html>
