lots of containers

--- a/index.html
+++ b/index.html
@@ -1,37 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Microsoft</title>
+    <link href="style.css" rel="stylesheet">
 </head>
+
 <body>
     <!-- Navigation -->
-    <nav>navigation
-        <!-- <a href="#">Microsoft 365</a>
+    <nav>
+        <img src="" alt="microsoft logo">
         <a href="#">Microsoft 365</a>
-        <a href="#">Microsoft 365</a>
-        <a href="#">Microsoft 365</a>
-        <a href="#">Microsoft 365</a>
-        <a href="#">Microsoft 365</a>
-        <a href="#">Microsoft 365</a>
-        <a href="#">Microsoft 365</a> -->
+        <a href="#">Office</a>
+        <a href="#">Windows</a>
+        <a href="#">Surface</a>
+        <a href="#">Xbox</a>
+        <a href="#">Deals</a>
+        <a href="#">Small Business</a>
+        <a href="#">Support</a>
     </nav>
     <!-- Banner -->
-    <div class="banner">banner</div>
+    <div class="banner">
+        <p>Students, parents, and educators:Take up to 10% off select tech...</p>
+    </div>
     <!-- Slideshow -->
-    <div class="big-fancy-pic">big fancy pic</div>
+    <div class="big-fancy-pic">
+        <img src="https://placekitten.com/800/300" alt="">
+        <p class="arrows">slideshow arrows<p>
+    </div>
     <!-- Icons -->
-    <span class="icons">icons</span>
+    <div class="icons">
+        <div class="icon">
+            <img src="icon" alt="ICON">
+            <div><a href="#">link</a></div>
+        </div>
+        <div class="icon">
+            <img src="icon" alt="ICON">
+            <div><a href="#">link</a></div>
+        </div>
+        <div class="icon">
+            <img src="icon" alt="ICON">
+            <div><a href="#">link</a></div>
+        </div>
+        <div class="icon">
+            <img src="icon" alt="ICON">
+            <div><a href="#">link</a></div>
+        </div>
+        <div class="icon">
+            <img src="icon" alt="ICON">
+            <div><a href="#">link</a></div>
+        </div>
+        <div class="icon">
+            <img src="icon" alt="ICON">
+            <div><a href="#">link</a></div>
+        </div>
+    </div>
+
     <!-- Products -->
-    <div class="products">products</div>
+    <div class="products">
+        <section>
+            <div>
+                <img src="http://placekitten.com/g/200/100" alt="Pic">
+            </div>
+            <div>
+                <strong>Bold Title</strong>
+            </div>
+            <div>
+                <p>A description</p>
+            </div>
+            <div>
+                <a href="Your choice of link">Link text</a>
+            </div>
+        </section>
+        <section>
+            <div>
+                <img src="http://placekitten.com/g/200/100" alt="Pic">
+            </div>
+            <div>
+                <strong>Bold Title</strong>
+            </div>
+            <div>
+                <p>A description</p>
+            </div>
+            <div>
+                <a href="Your choice of link">Link text</a>
+            </div>
+        </section>
+        <section>
+            <div>
+                <img src="http://placekitten.com/g/200/100" alt="Pic">
+            </div>
+            <div>
+                <strong>Bold Title</strong>
+            </div>
+            <div>
+                <p>A description</p>
+            </div>
+            <div>
+                <a href="Your choice of link">Link text</a>
+            </div>
+        </section>
+        <section>
+            <div>
+                <img src="http://placekitten.com/g/200/100" alt="Pic">
+            </div>
+            <div>
+                <strong>Bold Title</strong>
+            </div>
+            <div>
+                <p>A description</p>
+            </div>
+            <div>
+                <a href="Your choice of link">Link text</a>
+            </div>
+        </section>
+    </div>
     <!-- Sale -->
-    <div class="sale-banner">Sales banner</div>
+    <div class="sale-banner">
+        <img src="http://placekitten.com/g/800/200" alt="sale banner kitten">
+    </div>
     <!-- Business -->
-    <div class="business-boxes">Business ads</div>
+    <div class="business-boxes">
+        <div class="deal-box">
+            <img src="http://placekitten.com/g/200/100" alt="Pic">
+            <h2>Header here</h2>
+            <p>description</p>
+            <a href="">link</a>
+        </div>
+        <div class="deal-box">
+            <img src="http://placekitten.com/g/200/100" alt="Pic">
+            <h2>Header here</h2>
+            <p>description</p>
+            <a href="">link</a>
+        </div>
+        <div class="deal-box">
+            <img src="http://placekitten.com/g/200/100" alt="Pic">
+            <h2>Header here</h2>
+            <p>description</p>
+            <a href="">link</a>
+        </div>
+        <div class="deal-box">
+            <img src="http://placekitten.com/g/200/100" alt="Pic">
+            <h2>Header here</h2>
+            <p>description</p>
+            <a href="">link</a>
+        </div>
+
+    </div>
+
     <!-- Gaming -->
-    <div class="gaming-banner">Minecraft gaming</div>
+    <div class="gaming-banner">
+        <img src="http://placekitten.com/g/800/200" alt="gaming banner kitten">
+        <p class="arrows">slideshow arrows</p>
+    </div>
     <!-- Social Media -->
     <div class="social-media">Social media links</div>
     <!-- Footer index -->
@@ -39,4 +163,5 @@
         lots of footer links
     </footer>
 </body>
+
 </html>
