--- a/index.html
+++ b/index.html
@@ -63,41 +63,41 @@
     <div class="products">
         <section>
             <div>
-                <img src="http://placekitten.com/g/200/100" alt="Pic">
+                <img src="http://placekitten.com/g/200/100" alt="Kitten">
             </div>
             <div>
-                <strong>Bold Title</strong>
+                <strong>Cute Kitty</strong>
             </div>
             <div>
-                <p>A description</p>
+                <p>A curiosity</p>
             </div>
             <div>
-                <a href="Your choice of link">Link text</a>
-            </div>
-        </section>
-        <section>
-            <div>
-                <img src="http://placekitten.com/g/200/100" alt="Pic">
-            </div>
-            <div>
-                <strong>Bold Title</strong>
-            </div>
-            <div>
-                <p>A description</p>
-            </div>
-            <div>
-                <a href="Your choice of link">Link text</a>
+                <a href="https://www.hillspet.com/cat-care/routine-care/newborn-kitten-care?cq_src=google_ads&cq_cmp=386709375&cq_con=1230353735062405&cq_term=kitten%20care&cq_med=&cq_plac=&cq_net=o&cq_plt=gp&&msclkid=6577d6008b431c4ac918b4e5fd8d549e&utm_source=bing&utm_medium=cpc&utm_campaign=NA_US_WM_EN_HIL%20128_HPN_EQU_Pet_Evergreen_Search_Category%20Research_Kitten_General_Exact&utm_term=kitten%20care&utm_content=Kitten_Care_HR&gclid=6577d6008b431c4ac918b4e5fd8d549e&gclsrc=3p.ds">Kitty Care</a>
             </div>
         </section>
         <section>
             <div>
-                <img src="http://placekitten.com/g/200/100" alt="Pic">
+                <img src="https://place-puppy.com/200x100" alt="Puppy Pic">
             </div>
             <div>
-                <strong>Bold Title</strong>
+                <strong>Playful Puppy</strong>
             </div>
             <div>
-                <p>A description</p>
+                <p>A nuisance</p>
+            </div>
+            <div>
+                <a href="https://www.petfinder.com/">Dog Adoption</a>
+            </div>
+        </section>
+        <section>
+            <div>
+                <img src="https://media.wired.com/photos/5932983ca312645844996122/master/pass/chimps_w.jpg" alt="Chimp">
+            </div>
+            <div>
+                <strong>Cheesy Chimp</strong>
+            </div>
+            <div>
+                <p>Yes I'm going to keep illiterating</p>
             </div>
             <div>
                 <a href="Your choice of link">Link text</a>
@@ -126,25 +126,25 @@
     <div class="business-boxes">
         <div class="deal-box">
             <img src="http://placekitten.com/g/200/100" alt="Pic">
-            <h2>Header here</h2>
+            <h2>Are you</h2>
             <p>description</p>
             <a href="">link</a>
         </div>
         <div class="deal-box">
             <img src="http://placekitten.com/g/200/100" alt="Pic">
-            <h2>Header here</h2>
+            <h2>Sick of</h2>
             <p>description</p>
             <a href="">link</a>
         </div>
         <div class="deal-box">
             <img src="http://placekitten.com/g/200/100" alt="Pic">
-            <h2>Header here</h2>
+            <h2>This picture</h2>
             <p>description</p>
             <a href="">link</a>
         </div>
         <div class="deal-box">
             <img src="http://placekitten.com/g/200/100" alt="Pic">
-            <h2>Header here</h2>
+            <h2>Yet?</h2>
             <p>description</p>
             <a href="">link</a>
         </div>
