--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
             </div>
         </section>
     </div>
+    <br>
     <!-- Sale -->
     <div class="sale-banner">
         <img src="http://placekitten.com/g/800/200" alt="sale banner kitten">
@@ -167,10 +168,70 @@
         <p class="arrows">slideshow arrows</p>
     </div>
     <!-- Social Media -->
-    <div class="social-media">Social media links</div>
+    <div class="social-media">
+        <span>Follow Kittens</span>
+        <span><i class="fa-solid fa-cat"></i></span>
+        <span><i class="fa-solid fa-paw"></i></span>
+        <span><i class="fa-solid fa-shield-cat"></i></span>
+    </div>
     <!-- Footer index -->
     <footer>
-        lots of footer links
+        <div class="footerlinks">
+            <h3>long block of links</h3>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+        </div>
+        <div class="footerlinks">
+            <h3>long block of links</h3>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+        </div>
+        <div class="footerlinks">
+            <h3>long block of links</h3>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+        </div>
+        <div class="footerlinks">
+            <h3>long block of links</h3>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+        </div>
+        <div class="footerlinks">
+            <h3>long block of links</h3>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+        </div>
+        <div class="footerlinks">
+            <h3>long block of links</h3>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+            <p><a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">link</a></p>
+        </div>
+        <p>One line of links</p>
+
     </footer>
 </body>
 
